# clique-sibyl-github-data-connector

./: Cargo.toml  README.md  sibyl.toml
connectors/SibylGithubDataConnector/: Cargo.toml
connectors/SibylGithubDataConnector/src/: env.rs  github.rs  lib.rs
src/: github.rs  lib.rs
